--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
-<header class="navber navber-fixed-top navber-inverse">
+<header class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
      <%= link_to "Microposts", '#', id: "logo" %>
      <nav>
-         <ul class="nav navber-nav navber-right">
+         <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home", '#' %></li>
             <li><%= link_to "Help", '#' %></li>
             <li><%= link_to "Log in", '#' %></li>
